# OCRmyPDF

./: README.md  setup.cfg  setup.py
.docker/: Dockerfile  webservice.py
