[bdist_wheel]
python-tag = py35

[aliases]
test=pytest

[check-manifest]
ignore =
	.github

[tool:pytest]
norecursedirs = lib .pc .git output cache resources
testpaths = tests
filterwarnings =
	ignore:.*XMLParser.*:DeprecationWarning

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[metadata]  #metadata元数据：描述数据的数据
license_file = LICENSE
